--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=123456
 POSTGRES_DATABASE=depublic
+JWT_SECRET_KEY="akusayangmantanku"
+SESSION_SECRET_KEY="mantankujelek"
