--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=123456
 POSTGRES_DATABASE=depublic
 JWT_SECRET_KEY="depublic_mikti"
+Client_Key=SB-Mid-client-H7Z4FMUZChIkF434
+Server_Key=SB-Mid-server-xZ7-qy-JA9NMN0i3-2e69vR4
